--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
     <!-- Don't forget to link your CSS file! -->
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <header>
@@ -11,7 +12,12 @@
       <h1>Exceptional Realty Group</h1>
 
       <nav>
-        <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+        <a href="index.html" style="padding-left: 10px; padding-right: 10px; background-color: gray;"  >About</a> 
+        <a style="padding-left: 10px; padding-right: 10px; background-color: gray;"  href="new-properties.html">New Properties</a> 
+        <a style="padding-left: 10px; padding-right: 10px; background-color: gray;"  href="real-estate-listings.html">Listings</a> 
+        <a style="padding-left: 10px; padding-right: 10px; background-color: gray;"  href="market-report.html">Market Report</a> 
+        <a style="padding-left: 10px; padding-right: 10px; background-color: gray;"  href="contact.html">Contact</a> 
+        <a style="padding-left: 10px; padding-right: 10px; background-color: gray;"  href="http://hud.gov" target="_blank">H.U.D.</a>
       </nav>
     </header>
 
